# slam_in_autonomous_driving

./: .gitignore  CMakeLists.txt  readme.md
config/: mapping.yaml
src/: CMakeLists.txt
src/ch2/: CMakeLists.txt  motion_fx_parabola.cc
src/ch3/: process_gnss.cc  run_eskf_gins.cc  run_imu_integration.cc
src/ch4/: run_gins_pre_integ.cc  test_preintegration.cc
src/ch5/: pcd_to_bird_eye.cc  point_cloud_load_and_vis.cc  scan_to_range_image.cc  test_nn.cc
src/ch6/: loop_closing.cc  loop_closing.h  mapping_2d.cc  test_2d_icp_likelihood.cc  test_2d_icp_s2s.cc  test_2d_mapping.cc  test_2dlidar_io.cc  test_mr_matching.cc  test_occupancy_grid.cc
src/ch7/loosely_coupled_lio/: loosely_lio.cc
src/ch7/test/: run_gen_simu_data.cc  test_feature_extraction.cc  test_icp.cc  test_inc_ndt_lo.cc  test_loam_odom.cc  test_loosely_lio.cc  test_ndt_lo.cc
src/ch8/lio-iekf/: lio_iekf.cc
src/ch8/test/: test_lio_iekf.cc  test_lio_preinteg.cc
src/ch9/: dump_map.cc  frontend.cc  loopclosure.cc  optimization.cc  split_map.cc
src/tools/ui/: pangolin_window_impl.cc  ui_test.cc
